added aiven cloud Mysql database functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "repl_nix_carrer_swebsite"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.3"
+sqlalchemy = "^2.0.29"
+pymysql = "^1.1.0"
 
 
 [build-system]
